--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -42,6 +42,7 @@
                   [(page)]="thePageNumber"
                   [pageSize]="thePageSize"
                   [collectionSize]="theTotalElements"
+                  [maxSize]="5"
                   (pageChange)="listProducts()"
                 >
                 </ngb-pagination>
@@ -54,6 +55,7 @@
                   #myPageSelect
                   (change)="updatePageSize(myPageSelect.value)"
                 >
+                  <option>2</option>
                   <option selected="true">5</option>
                   <option>10</option>
                   <option>20</option>
