--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,7 @@
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a href="#">
-        <img
-          src="assets/images/logo.png"
-          alt="example"
-          class="img-responsive"
-        />
+        <img src="assets/images/logo.png" alt="logo" class="img-responsive" />
       </a>
     </div>
 
