decrement item quantity and remove item

--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -40,7 +40,10 @@
                   </div>
 
                   <div class="col">
-                    <button class="btn btn-primary btn-sm">
+                    <button
+                      (click)="decrementQuantity(tempCartItem)"
+                      class="btn btn-primary btn-sm"
+                    >
                       <i class="fas fa-minus"></i>
                     </button>
                   </div>
@@ -48,6 +51,13 @@
                   <div class="col-8"></div>
                 </div>
               </div>
+
+              <button
+                (click)="remove(tempCartItem)"
+                class="btn btn-primary btn-sm mt-2"
+              >
+                Remove
+              </button>
 
               <p class="mt-2">
                 Subtotal:
