--- a/src/styles.css
+++ b/src/styles.css
@@ -1057,3 +1057,12 @@ footer ul li {
     padding: 8px 0;
   }
 }
+.visually-hidden {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  white-space: nowrap;
+  clip-path: inset(50%);
+}
