--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -14,20 +14,18 @@
 
                 <div
                   *ngIf="
-                    firstName.invalid && (firstName.dirty || firstName.touched)
+                    firstName?.invalid &&
+                    (firstName?.dirty || firstName?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      firstName.errors.required ||
-                      firstName.errors.notOnlyWhitespace
-                    "
+                    *ngIf="firstName?.errors?.['required'] || firstName?.errors?.['notOnlyWhitespace']"
                   >
                     First Name is required
                   </div>
 
-                  <div *ngIf="firstName.errors.minlength">
+                  <div *ngIf="firstName?.errors?.['minlength']">
                     First Name must be at least 2 characters long
                   </div>
                 </div>
@@ -43,20 +41,17 @@
 
                 <div
                   *ngIf="
-                    lastName.invalid && (lastName.dirty || lastName.touched)
+                    lastName?.invalid && (lastName?.dirty || lastName?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      lastName.errors.required ||
-                      lastName.errors.notOnlyWhitespace
-                    "
+                    *ngIf="lastName?.errors?.['required'] || lastName?.errors?.['notOnlyWhitespace']"
                   >
                     Last Name is required
                   </div>
 
-                  <div *ngIf="lastName.errors.minlength">
+                  <div *ngIf="lastName?.errors?.['minlength']">
                     Last Name must be at least 2 characters long
                   </div>
                 </div>
@@ -71,12 +66,14 @@
                 <input formControlName="email" type="text" />
 
                 <div
-                  *ngIf="email.invalid && (email.dirty || email.touched)"
+                  *ngIf="email?.invalid && (email?.dirty || email?.touched)"
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="email.errors.required">Email is required</div>
+                  <div *ngIf="email?.errors?.['required']">
+                    Email is required
+                  </div>
 
-                  <div *ngIf="email.errors.pattern">
+                  <div *ngIf="email?.errors?.['pattern']">
                     Email must be a valid email address format
                   </div>
                 </div>
@@ -104,13 +101,13 @@
 
                 <div
                   *ngIf="
-                    shippingAddressCountry.invalid &&
-                    (shippingAddressCountry.dirty ||
-                      shippingAddressCountry.touched)
+                    shippingAddressCountry?.invalid &&
+                    (shippingAddressCountry?.dirty ||
+                      shippingAddressCountry?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="shippingAddressCountry.errors.required">
+                  <div *ngIf="shippingAddressCountry?.errors?.['required']">
                     Country is required
                   </div>
                 </div>
@@ -126,21 +123,18 @@
 
                 <div
                   *ngIf="
-                    shippingAddressStreet.invalid &&
-                    (shippingAddressStreet.dirty ||
-                      shippingAddressStreet.touched)
+                    shippingAddressStreet?.invalid &&
+                    (shippingAddressStreet?.dirty ||
+                      shippingAddressStreet?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      shippingAddressStreet.errors.required ||
-                      shippingAddressStreet.errors.notOnlyWhitespace
-                    "
+                    *ngIf="shippingAddressStreet?.errors?.['required'] || shippingAddressStreet?.errors?.['notOnlyWhitespace']"
                   >
                     Street is required
                   </div>
-                  <div *ngIf="shippingAddressStreet.errors.minlength">
+                  <div *ngIf="shippingAddressStreet?.errors?.['minlength']">
                     Street must be at least 2 characters long
                   </div>
                 </div>
@@ -156,20 +150,17 @@
 
                 <div
                   *ngIf="
-                    shippingAddressCity.invalid &&
-                    (shippingAddressCity.dirty || shippingAddressCity.touched)
+                    shippingAddressCity?.invalid &&
+                    (shippingAddressCity?.dirty || shippingAddressCity?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      shippingAddressCity.errors.required ||
-                      shippingAddressCity.errors.notOnlyWhitespace
-                    "
+                    *ngIf="shippingAddressCity?.errors?.['required'] || shippingAddressCity?.errors?.['notOnlyWhitespace']"
                   >
                     City is required
                   </div>
-                  <div *ngIf="shippingAddressCity.errors.minlength">
+                  <div *ngIf="shippingAddressCity?.errors?.['minlength']">
                     City must be at least 2 characters long
                   </div>
                 </div>
@@ -192,12 +183,13 @@
 
                 <div
                   *ngIf="
-                    shippingAddressState.invalid &&
-                    (shippingAddressState.dirty || shippingAddressState.touched)
+                    shippingAddressState?.invalid &&
+                    (shippingAddressState?.dirty ||
+                      shippingAddressState?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="shippingAddressState.errors.required">
+                  <div *ngIf="shippingAddressState?.errors?.['required']">
                     State is required
                   </div>
                 </div>
@@ -213,21 +205,18 @@
 
                 <div
                   *ngIf="
-                    shippingAddressZipCode.invalid &&
-                    (shippingAddressZipCode.dirty ||
-                      shippingAddressZipCode.touched)
+                    shippingAddressZipCode?.invalid &&
+                    (shippingAddressZipCode?.dirty ||
+                      shippingAddressZipCode?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      shippingAddressZipCode.errors.required ||
-                      shippingAddressZipCode.errors.notOnlyWhitespace
-                    "
+                    *ngIf="shippingAddressZipCode?.errors?.['required'] || shippingAddressZipCode?.errors?.['notOnlyWhitespace']"
                   >
                     Zip code is required
                   </div>
-                  <div *ngIf="shippingAddressZipCode.errors.minlength">
+                  <div *ngIf="shippingAddressZipCode?.errors?.['minlength']">
                     Zip code must be at least 2 characters long
                   </div>
                 </div>
@@ -241,7 +230,9 @@
           <label class="au-checkbox">
             <input
               type="checkbox"
-              (change)="copyShippingAddressToBillingAddress($event)"
+              (change)="
+                copyShippingAddressToBillingAddress($any($event).target.value)
+              "
             />
             <span class="au-checkmark"></span>Billing Address same as Shipping
             Address
@@ -267,13 +258,13 @@
 
                 <div
                   *ngIf="
-                    billingAddressCountry.invalid &&
-                    (billingAddressCountry.dirty ||
-                      billingAddressCountry.touched)
+                    billingAddressCountry?.invalid &&
+                    (billingAddressCountry?.dirty ||
+                      billingAddressCountry?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="billingAddressCountry.errors.required">
+                  <div *ngIf="billingAddressCountry?.errors?.['required']">
                     Country is required
                   </div>
                 </div>
@@ -289,20 +280,18 @@
 
                 <div
                   *ngIf="
-                    billingAddressStreet.invalid &&
-                    (billingAddressStreet.dirty || billingAddressStreet.touched)
+                    billingAddressStreet?.invalid &&
+                    (billingAddressStreet?.dirty ||
+                      billingAddressStreet?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      billingAddressStreet.errors.required ||
-                      billingAddressStreet.errors.notOnlyWhitespace
-                    "
+                    *ngIf="billingAddressStreet?.errors?.['required'] || billingAddressStreet?.errors?.['notOnlyWhitespace']"
                   >
                     Street is required
                   </div>
-                  <div *ngIf="billingAddressStreet.errors.minlength">
+                  <div *ngIf="billingAddressStreet?.errors?.['minlength']">
                     Street must be at least 2 characters long
                   </div>
                 </div>
@@ -318,20 +307,17 @@
 
                 <div
                   *ngIf="
-                    billingAddressCity.invalid &&
-                    (billingAddressCity.dirty || billingAddressCity.touched)
+                    billingAddressCity?.invalid &&
+                    (billingAddressCity?.dirty || billingAddressCity?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      billingAddressCity.errors.required ||
-                      billingAddressCity.errors.notOnlyWhitespace
-                    "
+                    *ngIf="billingAddressCity?.errors?.['required'] || billingAddressCity?.errors?.['notOnlyWhitespace']"
                   >
                     City is required
                   </div>
-                  <div *ngIf="billingAddressCity.errors.minlength">
+                  <div *ngIf="billingAddressCity?.errors?.['minlength']">
                     City must be at least 2 characters long
                   </div>
                 </div>
@@ -354,12 +340,12 @@
 
                 <div
                   *ngIf="
-                    billingAddressState.invalid &&
-                    (billingAddressState.dirty || billingAddressState.touched)
+                    billingAddressState?.invalid &&
+                    (billingAddressState?.dirty || billingAddressState?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="billingAddressState.errors.required">
+                  <div *ngIf="billingAddressState?.errors?.['required']">
                     State is required
                   </div>
                 </div>
@@ -375,22 +361,19 @@
 
                 <div
                   *ngIf="
-                    billingAddressZipCode.invalid &&
-                    (billingAddressZipCode.dirty ||
-                      billingAddressZipCode.touched)
+                    billingAddressZipCode?.invalid &&
+                    (billingAddressZipCode?.dirty ||
+                      billingAddressZipCode?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      billingAddressZipCode.errors.required ||
-                      billingAddressZipCode.errors.notOnlyWhitespace
-                    "
+                    *ngIf="billingAddressZipCode?.errors?.['required'] || billingAddressZipCode?.errors?.['notOnlyWhitespace']"
                   >
                     Zip code is required
                   </div>
 
-                  <div *ngIf="billingAddressZipCode.errors.minlength">
+                  <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
                     Zip code must be at least 2 characters long
                   </div>
                 </div>
@@ -414,12 +397,12 @@
 
                 <div
                   *ngIf="
-                    creditCardType.invalid &&
-                    (creditCardType.dirty || creditCardType.touched)
+                    creditCardType?.invalid &&
+                    (creditCardType?.dirty || creditCardType?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="creditCardType.errors.required">
+                  <div *ngIf="creditCardType?.errors?.['required']">
                     Credit card type is required
                   </div>
                 </div>
@@ -435,21 +418,19 @@
 
                 <div
                   *ngIf="
-                    creditCardNameOnCard.invalid &&
-                    (creditCardNameOnCard.dirty || creditCardNameOnCard.touched)
+                    creditCardNameOnCard?.invalid &&
+                    (creditCardNameOnCard?.dirty ||
+                      creditCardNameOnCard?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
                   <div
-                    *ngIf="
-                      creditCardNameOnCard.errors.required ||
-                      creditCardNameOnCard.errors.notOnlyWhitespace
-                    "
+                    *ngIf="creditCardNameOnCard?.errors?.['required'] || creditCardNameOnCard?.errors?.['notOnlyWhitespace']"
                   >
                     Name is required
                   </div>
 
-                  <div *ngIf="creditCardNameOnCard.errors.minlength">
+                  <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
                     Name must be at least 2 characters long
                   </div>
                 </div>
@@ -465,15 +446,15 @@
 
                 <div
                   *ngIf="
-                    creditCardNumber.invalid &&
-                    (creditCardNumber.dirty || creditCardNumber.touched)
+                    creditCardNumber?.invalid &&
+                    (creditCardNumber?.dirty || creditCardNumber?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="creditCardNumber.errors.required">
+                  <div *ngIf="creditCardNumber?.errors?.['required']">
                     Card number is required
                   </div>
-                  <div *ngIf="creditCardNumber.errors.pattern">
+                  <div *ngIf="creditCardNumber?.errors?.['pattern']">
                     Card number must be 16 digits long
                   </div>
                 </div>
@@ -489,16 +470,16 @@
 
                 <div
                   *ngIf="
-                    creditCardSecurityCode.invalid &&
-                    (creditCardSecurityCode.dirty ||
-                      creditCardSecurityCode.touched)
+                    creditCardSecurityCode?.invalid &&
+                    (creditCardSecurityCode?.dirty ||
+                      creditCardSecurityCode?.touched)
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="creditCardSecurityCode.errors.required">
+                  <div *ngIf="creditCardSecurityCode?.errors?.['required']">
                     Security code is required
                   </div>
-                  <div *ngIf="creditCardSecurityCode.errors.pattern">
+                  <div *ngIf="creditCardSecurityCode?.errors?.['pattern']">
                     Security code must be 3 digits long
                   </div>
                 </div>
